--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,14 @@
 }
 
 .navbar {
-  background: #eee;
+  background: #1c4645;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   margin: 0 auto;
 }
 
 .navbar > div {
-  background: #eeeeee;
+  background: #1c4645;
   padding: 20px;
 }
 .navbar > div:nth-child(1) {
@@ -26,9 +26,16 @@ text-align: center;
   display: grid;
 
 }
-
+body {
+  font-family: "Source Sans Pro", sans-serif;
+  color: white;
+  font-weight: 300;
+  background: #50a3a2;
+  width: 100%;
+  height: 100%;
+}
 .content {
-  background-color: #eeeeee;
+  background-color: #1c4645 ;
   border: 1px solid;
   padding: 20px;
   display: grid;
@@ -40,4 +47,40 @@ text-align: center;
   padding: 20px;
   border: 1px solid #ccc;
   grid-template-columns: repeat(6,1fr);
+}
+
+.container {
+  margin: 10% auto;
+  padding: 80px 0;
+  text-align: center;
+}
+
+.container h1 {
+  font-size: 40px;
+  font-weight: 200;
+}
+input {
+  border: 1px solid rgba(252, 252, 252, 0.4);
+  background-color: rgba(255, 255, 255, 0.3);
+  width: 250px;
+  border-radius: 3px;
+  font-family: "Source Sans Pro", sans-serif;
+  padding: 10px 15px;
+  margin: 0 auto 10px auto;
+  display: block;
+  text-align: center;
+  font-size: 18px;
+  color: white;
+  font-weight: 300;
+}
+button {
+  appearance: none;
+  outline: 0;
+  background-color: white;
+  border: 0;
+  padding: 10px 15px;
+  color: #50a3a2;
+  border-radius: 3px;
+  width: 250px;
+  font-size: 18px;
 }
