--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -1,14 +1,17 @@
 .ContentAll {
     display: flex;
     flex-direction: column;
-    background-color: #50a3a2;
+    background-color: rgba(255, 255, 255, 0.3);
+    border: 1px solid rgba(252, 252, 252, 0.4);
     margin: 2vh;
     align-items: center;
     justify-content: space-around;
     font-size: 2vw;
-    box-shadow: 5px 5px 10px 0px black;
-    
-
+    box-shadow: 0px 2px 0px 0px black;
+    color: white;
+    border-radius: 3px;
+    font-family: "Source Sans Pro", sans-serif;
+    padding: 10px 15px;
 }
 
 
@@ -16,4 +19,5 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    
 }
